--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,16 @@ header {
   /* border: 1px solid orange; */
 }
 
+/* come back to this */
+/* .nav-button:hover {
+  background-color: rgb(0, 140, 134, 0.1);
+  border-radius: 0.75em;
+  padding: 0.3em 0.7em;
+  border: rgb(0, 140, 134, 0.2) solid 1px;
+  cursor: pointer;
+  color: white;
+} */
+
 .main-nav {
   height: 100%;
   margin: 0;
@@ -67,9 +77,16 @@ header {
 #resume {
   color: #008c86;
   border: #008c86 solid 1px;
-  border-radius: 0.3em;
-  padding: 0.2em 0.8em;
+  border-radius: 0.75em;
+  padding: 0.3em 0.8em;
   margin-left: 1.2em;
+}
+
+#resume:hover {
+  color: white;
+  background-color: #008c86;
+  border: #008c86 solid 1px;
+  cursor: pointer;
 }
 
 .intro {
@@ -359,4 +376,20 @@ section + section {
 }
 .sidebar-icon {
   width: 30px;
+}
+
+.hello-button {
+  color: #008c86;
+  border: #008c86 solid 1px;
+  border-radius: 0.75em;
+  padding: 0.3em 0.8em;
+  width: 150px;
+  text-decoration: none;
+}
+
+.hello-button:hover {
+  color: white;
+  background-color: #008c86;
+  border: #008c86 solid 1px;
+  cursor: pointer;
 }
