--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,10 @@
 :root {
   font-size: 1.2rem;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", "Calibri", "Trebuchet MS",
+    sans-serif;
   color: #8992b0;
+  letter-spacing: 0.02rem;
+  line-height: 1.6rem;
 }
 
 * {
@@ -10,7 +13,7 @@
 }
 
 body * + * {
-  margin-top: 1em;
+  margin-top: 1.5rem;
 }
 
 body {
@@ -94,25 +97,21 @@ header {
   /* adjusts that first in-frame window */
   margin-top: 16vh;
   margin-bottom: 7em;
-  letter-spacing: 0.015rem;
 }
 
-.intro div {
+/* .intro div {
   margin-top: 0.8rem;
-}
+} */
 
 .intro-blurb {
-  line-height: 1.7rem;
+  /* line-height: 1.6rem; */
   width: 55%;
   /* border: 1px solid yellowgreen; */
 }
 
 .title + div {
   margin-top: 1.7rem;
-}
-
-.paragraph {
-  letter-spacing: 0.05rem;
+  /* border: 1px solid green; */
 }
 
 section {
@@ -134,17 +133,52 @@ section + section {
 .lead-in {
   color: #008c86;
   font-size: 1.4rem;
+  /* border: 1px solid orange; */
 }
 
 .name {
+  /* margin-top: 1.5rem; */
   color: #ccd6f6;
   font-size: 2.5em;
+  /* border: 1px solid purple; */
 }
 
 .name + div {
+  margin-top: 1.9rem;
   color: #8992b0;
   font-size: 2.5em;
-  margin-top: 0.1em;
+  /* margin-top: 0.1em; */
+  /* border: 1px solid green; */
+}
+
+.about-me-flex {
+  display: flex;
+  width: 100%;
+  border: 1px solid pink;
+}
+
+.intro-and-skills-flex {
+  display: flex;
+  flex-direction: column;
+  width: 60%;
+  border: 1px solid red;
+}
+
+.listed-skills-flex {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.listed-skills-flex li {
+  margin-top: 0;
+}
+
+.profile-image-container {
+  width: 40%;
+}
+
+.profile-image-container > img {
+  width: 100%;
 }
 
 .project {
