--- a/styles.css
+++ b/styles.css
@@ -185,6 +185,7 @@ section + section {
   display: flex;
   /* border: 1px solid tan; */
   height: 500px;
+  /* position: relative; */
 }
 .project + .project {
   margin-top: 3.5rem;
@@ -430,4 +431,34 @@ section + section {
   background-color: #008c86;
   border: #008c86 solid 1px;
   cursor: pointer;
+}
+
+.slideshow-container {
+  width: 300px;
+  height: 300px;
+  border: 1px solid red;
+}
+
+.slideshow-image {
+  margin-top: 0;
+  width: 100%;
+}
+
+.slideshow-nav-bar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border: 1px solid blue;
+}
+
+.slideshow-nav-bar > div {
+  margin-top: 0;
+  width: 20px;
+  height: 20px;
+  background-color: grey;
+  border-radius: 50%;
+}
+
+#nav-dot-clicked {
+  background-color: #008c86;
 }
