--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
     sans-serif;
   color: #8992b0;
   letter-spacing: 0.02rem;
-  line-height: 1.6rem;
+  line-height: 1.5rem;
 }
 
 * {
@@ -21,7 +21,8 @@ body {
   margin: 2em 7.1em;
   font-size: 1.2rem;
   /* border: 1px solid red; */
-  min-width: 850px;
+  min-width: 925px;
+  max-width: 1325px;
 }
 
 header {
@@ -154,6 +155,7 @@ section + section {
 .about-me-flex {
   display: flex;
   width: 100%;
+  height: 425px;
   border: 1px solid pink;
 }
 
@@ -162,14 +164,33 @@ section + section {
   flex-direction: column;
   width: 60%;
   border: 1px solid red;
+  height: 100%;
+}
+
+.about-me-intro {
+  border: 1px solid grey;
+}
+
+.skills {
+  flex-grow: 1;
+  border: solid green 1px;
 }
 
 .listed-skills-flex {
   display: flex;
+  flex-direction: column;
   flex-wrap: wrap;
+  border: 1px solid purple;
+  list-style-type: square;
+  padding-left: 20px;
+  margin-left: 0;
+  height: 130px;
+  margin-bottom: 0;
+  /* flex-grow: 1; */
 }
 
 .listed-skills-flex li {
+  margin-right: 1.7rem;
   margin-top: 0;
 }
 
@@ -184,7 +205,7 @@ section + section {
 .project {
   display: flex;
   /* border: 1px solid tan; */
-  height: 500px;
+  height: 515px;
   /* position: relative; */
 }
 .project + .project {
@@ -201,13 +222,70 @@ section + section {
   margin-right: 0.3em;
 }
 
+.project-image-container {
+  position: relative;
+}
+
+.slideshow-container {
+  /* border: 1px solid red; */
+}
+
+.slideshow-image {
+  margin-top: 0;
+  width: 100%;
+}
+
+.slideshow-nav-bar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  /* border: 1px solid blue; */
+  /* z-index: 1; */
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0px;
+  width: 100%;
+  padding-top: 25px;
+  padding-bottom: 30px;
+  padding-right: 35%;
+  padding-left: 35%;
+  margin-right: auto;
+  margin-left: auto;
+  /* turn this on when resizing */
+  /* background-color: rgb(191, 195, 206, 0.3); */
+}
+
+.slideshow-nav-bar > div {
+  margin-top: 0;
+  width: 20px;
+  height: 20px;
+  background-color: rgb(128, 128, 128, 0.5);
+  border-radius: 50%;
+}
+
+#nav-dot-clicked {
+  background-color: #008c86;
+}
+
+/* .background-slideshow-nav {
+
+  z-index: 500;
+  background-color: #1c377f;
+  width: 300px;
+  height: 400px;
+  left: 0;
+  bottom: 300;
+} */
+
 .project-odd > .project-image-container {
-  width: calc(53% + 0px);
+  width: calc(57% + 0px);
   object-fit: cover;
   overflow: hidden;
   /* border: 1px solid green; */
-  height: 425px;
-  border-radius: 0.5em;
+  height: 450px;
+  border-radius: 1.1em;
+  background-color: rgb(137, 146, 176);
 }
 
 /* would like height of images to be the "same" as text block */
@@ -220,42 +298,46 @@ section + section {
   text-align: right;
   position: relative;
   /* position: absolute; */
-  width: 53%;
+  width: 49%;
   right: 0;
   margin-left: -50px;
   /* margin-top: 5em; */
   align-self: flex-end;
-  height: 425px;
+  height: 450px;
   background: rgb(120, 163, 170, 0.6);
   padding: 1.5em 2.5em;
   color: white;
-  border-radius: 0.5em;
+  border-radius: 1.1em;
   /* border: 1px solid orange; */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-end;
 }
 
 .project-even > .project-image-container {
   text-align: right;
   position: relative;
   /* position: absolute; */
-  width: 53%;
+  width: 57%;
   right: 0;
   margin-left: -50px;
   /* margin-top: 5em; */
   align-self: flex-end;
-  height: 425px;
-  border-radius: 0.5em;
+  height: 450px;
+  border-radius: 1.1em;
   /* border: 1px solid orange; */
   object-fit: cover;
   overflow: hidden;
 }
 
 .project-even > .project-details {
-  width: calc(53% + 0px);
+  width: calc(49% + 0px);
   object-fit: cover;
   overflow: hidden;
   /* border: 1px solid green; */
-  height: 425px;
-  border-radius: 0.5em;
+  height: 450px;
+  border-radius: 1.1em;
   z-index: 10;
   color: white;
   background: rgb(120, 163, 170, 0.6);
@@ -269,19 +351,30 @@ section + section {
 
 .project-name {
   margin-top: 0.5rem;
-  font-size: 1.6rem;
+  font-size: 1.5rem;
   font-weight: lighter;
 }
 
-.description {
+.description-odd {
   margin-top: 0.5rem;
   margin-bottom: 0;
+  font-size: 1.1rem;
+  padding-left: 1.5rem;
+}
+
+.description-even {
+  margin-top: 0.5rem;
+  margin-bottom: 0;
+  font-size: 1.1rem;
+  padding-right: 1.5rem;
 }
 
 .tech-container {
   width: 100%;
   /* border: 1px solid red; */
-  margin-top: 0;
+  margin-top: 0.5rem;
+  padding-top: 0;
+  color: #8992b0;
 }
 
 .tech {
@@ -291,6 +384,7 @@ section + section {
   list-style: none;
   padding: 0;
   margin-top: 0;
+  margin: 0;
 }
 
 .tech-odd {
@@ -300,13 +394,15 @@ section + section {
 .tech-odd > li {
   font-size: 1.2rem;
   /* margin-top: 0; */
-  margin-top: 1rem;
+  margin-top: 0rem;
   margin-left: 1.3rem;
+  font-size: 1.1rem;
 }
 
 .tech-odd > li:first-child {
-  margin-top: 1rem;
+  /* margin-top: 1rem; */
   margin-left: 0rem;
+  font-size: 1.1rem;
 }
 
 .tech-even {
@@ -328,6 +424,7 @@ section + section {
 .links {
   width: 100%;
   /* border: 1px solid green; */
+  margin-top: 0.5rem;
 }
 
 .links > ul {
@@ -343,6 +440,14 @@ section + section {
   font-size: 1.2rem;
   /* margin: 0em 0em 0em 1em; */
   margin-top: 0;
+}
+
+.links > ul li + li {
+  font-size: 1.2rem;
+  /* margin: 0em 0em 0em 1em; */
+  margin-top: 0;
+  /* border: 1px solid red; */
+  margin-top: -2px;
 }
 
 .links-odd > ul {
@@ -431,34 +536,4 @@ section + section {
   background-color: #008c86;
   border: #008c86 solid 1px;
   cursor: pointer;
-}
-
-.slideshow-container {
-  width: 300px;
-  height: 300px;
-  border: 1px solid red;
-}
-
-.slideshow-image {
-  margin-top: 0;
-  width: 100%;
-}
-
-.slideshow-nav-bar {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  border: 1px solid blue;
-}
-
-.slideshow-nav-bar > div {
-  margin-top: 0;
-  width: 20px;
-  height: 20px;
-  background-color: grey;
-  border-radius: 50%;
-}
-
-#nav-dot-clicked {
-  background-color: #008c86;
 }
