--- a/styles.css
+++ b/styles.css
@@ -68,8 +68,8 @@ header {
 
 .main-nav > ul li {
   margin: 0;
-  padding-left: 1.2em;
-  padding-right: 1.2em;
+  padding-left: 1.3em;
+  padding-right: 1.3em;
   list-style: none;
 }
 
@@ -81,9 +81,11 @@ header {
 #resume {
   color: #008c86;
   border: #008c86 solid 1px;
-  border-radius: 0.75em;
+  border-radius: 1em;
   padding: 0.3em 0.8em;
   margin-left: 1.2em;
+  width: 135px;
+  text-align: center;
 }
 
 #resume:hover {
@@ -205,7 +207,7 @@ section + section {
 .project {
   display: flex;
   /* border: 1px solid tan; */
-  height: 515px;
+  height: 525px;
   /* position: relative; */
 }
 .project + .project {
@@ -282,9 +284,9 @@ section + section {
   width: calc(57% + 0px);
   object-fit: cover;
   overflow: hidden;
-  /* border: 1px solid green; */
+  border: 1px solid orange;
   height: 450px;
-  border-radius: 1.1em;
+  border-radius: 1.2em;
   background-color: rgb(137, 146, 176);
 }
 
@@ -307,12 +309,13 @@ section + section {
   background: rgb(120, 163, 170, 0.6);
   padding: 1.5em 2.5em;
   color: white;
-  border-radius: 1.1em;
+  border-radius: 1.2em;
   /* border: 1px solid orange; */
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-end;
+  box-shadow: 0 3px 10px rgba(147, 147, 147, 0.1);
 }
 
 .project-even > .project-image-container {
@@ -325,8 +328,8 @@ section + section {
   /* margin-top: 5em; */
   align-self: flex-end;
   height: 450px;
-  border-radius: 1.1em;
-  /* border: 1px solid orange; */
+  border-radius: 1.2em;
+  border: 1px solid orange;
   object-fit: cover;
   overflow: hidden;
 }
@@ -337,7 +340,7 @@ section + section {
   overflow: hidden;
   /* border: 1px solid green; */
   height: 450px;
-  border-radius: 1.1em;
+  border-radius: 1.2em;
   z-index: 10;
   color: white;
   background: rgb(120, 163, 170, 0.6);
@@ -412,13 +415,13 @@ section + section {
 .tech-even > li {
   font-size: 1.2rem;
   margin-top: 1rem;
-  /* margin-top: 0; */
+  margin-top: 0;
   margin-right: 1.3rem;
 }
 
 .tech-even > li:last-child {
   margin-right: 0rem;
-  margin-top: 1rem;
+  margin-top: 0rem;
 }
 
 .links {
@@ -480,15 +483,6 @@ section + section {
   /* border: 1px solid red; */
 }
 
-#contact {
-  /* position: absolute;
-  top: 1000px;
-  bottom: 500px;
-  margin-bottom: 1000px;
-  color: red;
-  margin-top: 500px; */
-}
-
 .sidebar {
   position: fixed;
   bottom: 150px;
@@ -522,12 +516,24 @@ section + section {
   width: 30px;
 }
 
+.contact {
+  /* border: 1px solid red; */
+  /* min-height: 300px; */
+}
+
+.contact-me-paragraph {
+  width: 70%;
+}
+
 .hello-button {
+  text-align: center;
+  margin-top: 1.6rem;
+  display: block;
   color: #008c86;
   border: #008c86 solid 1px;
-  border-radius: 0.75em;
+  border-radius: 1em;
   padding: 0.3em 0.8em;
-  width: 150px;
+  width: 145px;
   text-decoration: none;
 }
 
@@ -536,4 +542,19 @@ section + section {
   background-color: #008c86;
   border: #008c86 solid 1px;
   cursor: pointer;
+}
+
+.footer > div {
+  color: #008c86;
+  width: 100%;
+  text-align: center;
+  margin-top: 4rem;
+}
+
+.personal-site-github-link {
+  /* border: 1px solid violet; */
+  margin-top: 0.9rem;
+  display: block;
+  text-align: center;
+  margin-bottom: 4rem;
 }
