--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
   color: #8992b0;
   letter-spacing: 0.02rem;
   line-height: 1.5rem;
+  margin: 2.2em 7.3em;
 }
 
 * {
@@ -18,11 +19,12 @@ body * + * {
 
 body {
   background-color: white;
-  margin: 2em 7.1em;
+  /* margin: 2em 7.1em; */
+  margin: 0;
   font-size: 1.2rem;
   /* border: 1px solid red; */
   min-width: 925px;
-  max-width: 1325px;
+  max-width: 1100px;
 }
 
 header {
@@ -158,50 +160,67 @@ section + section {
   display: flex;
   width: 100%;
   height: 425px;
-  border: 1px solid pink;
+  /* border: 1px solid pink; */
 }
 
 .intro-and-skills-flex {
   display: flex;
   flex-direction: column;
   width: 60%;
-  border: 1px solid red;
+  /* border: 1px solid red; */
   height: 100%;
+  padding-right: 1.5rem;
 }
 
 .about-me-intro {
-  border: 1px solid grey;
+  /* border: 1px solid grey; */
 }
 
 .skills {
   flex-grow: 1;
-  border: solid green 1px;
+  /* border: solid green 1px; */
 }
 
 .listed-skills-flex {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  border: 1px solid purple;
+  /* border: 1px solid purple; */
   list-style-type: square;
   padding-left: 20px;
   margin-left: 0;
-  height: 130px;
+  height: 145px;
+  margin-top: 1rem;
   margin-bottom: 0;
+  width: 100%;
   /* flex-grow: 1; */
 }
 
 .listed-skills-flex li {
-  margin-right: 1.7rem;
+  margin-right: 16%;
   margin-top: 0;
+  margin-bottom: 0.9rem;
 }
 
 .profile-image-container {
+  margin-top: 0;
   width: 40%;
+  /* border: 1px solid rgb(0, 47, 255); */
+  position: relative;
 }
 
 .profile-image-container > img {
-  width: 100%;
+  width: 91%;
+}
+
+.profile-image-background {
+  margin-top: 0;
+  position: absolute;
+  top: 30px;
+  left: 30px;
+  width: 91%;
+  background-color: #008c86;
+  z-index: -5;
 }
 
 .project {
@@ -557,4 +576,11 @@ section + section {
   display: block;
   text-align: center;
   margin-bottom: 4rem;
+}
+
+/*   max-width: 1325px; */
+@media only screen and (min-width: 1320px) {
+  body {
+    margin: 0 auto;
+  }
 }
