--- a/styles.css
+++ b/styles.css
@@ -207,6 +207,7 @@ section + section {
   width: 40%;
   /* border: 1px solid rgb(0, 47, 255); */
   position: relative;
+  z-index: 5;
 }
 
 .profile-image-container > img {
@@ -220,7 +221,13 @@ section + section {
   left: 30px;
   width: 91%;
   background-color: #008c86;
-  z-index: -5;
+  z-index: -1;
+  transition: all 1s;
+}
+
+#image-background-hovered {
+  transform: scale(0.98);
+  transform-origin: 0% 0%;
 }
 
 .project {
@@ -251,17 +258,44 @@ section + section {
   /* border: 1px solid red; */
 }
 
-.slideshow-image {
-  margin-top: 0;
+/*  */
+
+.swiper {
   width: 100%;
+  height: 100%;
 }
 
-.slideshow-nav-bar {
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  margin-top: 0;
+  /* Center slide text vertically */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.swiper-pagination {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  /* border: 1px solid blue; */
-  /* z-index: 1; */
   position: absolute;
   left: 0;
   right: 0;
@@ -273,8 +307,27 @@ section + section {
   padding-left: 35%;
   margin-right: auto;
   margin-left: auto;
-  /* turn this on when resizing */
-  /* background-color: rgb(191, 195, 206, 0.3); */
+}
+
+.swiper-pagination-bullet {
+  width: 15px !important;
+  height: 15px !important;
+  background-color: rgb(0, 140, 134, 0.5) !important;
+}
+
+.swiper-pagination-bullet-active {
+  width: 15px !important;
+  height: 15px !important;
+  background-color: rgb(0, 140, 134) !important;
+}
+
+/* #slideshow-image {
+  margin-top: 0;
+} */
+
+/*  */
+/* .slideshow-nav-bar {
+  
 }
 
 .slideshow-nav-bar > div {
@@ -287,7 +340,8 @@ section + section {
 
 #nav-dot-clicked {
   background-color: #008c86;
-}
+} */
+/*  */
 
 /* .background-slideshow-nav {
 
@@ -335,6 +389,7 @@ section + section {
   justify-content: space-between;
   align-items: flex-end;
   box-shadow: 0 3px 10px rgba(147, 147, 147, 0.1);
+  z-index: 10;
 }
 
 .project-even > .project-image-container {
