--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
   color: #8992b0;
   letter-spacing: 0.02rem;
   line-height: 1.5rem;
-  margin: 2.2em 7.3em;
+  margin: 2.2em 7.3em 2.2em 7.5em;
 }
 
 * {
@@ -24,7 +24,7 @@ body {
   font-size: 1.2rem;
   /* border: 1px solid red; */
   min-width: 925px;
-  max-width: 1100px;
+  max-width: 1095px;
 }
 
 header {
@@ -268,7 +268,7 @@ section + section {
 
 .swiper-slide {
   text-align: center;
-  font-size: 18px;
+  /* font-size: 15px; */
   background: #fff;
   margin-top: 0;
   /* Center slide text vertically */
@@ -289,7 +289,9 @@ section + section {
 .swiper-slide img {
   display: block;
   width: 100%;
-  height: 100%;
+  position: absolute !important;
+  top: 0 !important;
+  /* border: 1px solid teal; */
   object-fit: cover;
 }
 
@@ -303,73 +305,83 @@ section + section {
   bottom: 0px;
   width: 100%;
   padding-top: 25px;
-  padding-bottom: 30px;
-  padding-right: 39%;
-  padding-left: 39%;
+  padding-bottom: 12.5px;
+  padding-right: 35%;
+  padding-left: 35%;
   margin-right: auto;
   margin-left: auto;
 }
 
 .swiper-pagination-bullet {
-  width: 15px !important;
-  height: 15px !important;
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;
+  font-size: 1rem;
+  color: black;
+  width: 30px !important;
+  height: 30px !important;
   opacity: 1 !important;
-  background-color: rgb(0, 140, 134, 0.3) !important;
+  background-color: rgba(0, 0, 0, 0.2) !important;
 }
 
 .swiper-pagination-bullet-active {
-  width: 15px !important;
-  height: 15px !important;
-  background-color: rgb(0, 140, 134) !important;
+  color: white;
+  background-color: rgb(0, 155, 155) !important;
 }
 
-.swiper-button-prev {
+/* .swiper-button-prev {
   color: rgb(0, 140, 134) !important;
-  left: 25px !important;
+  left: 30% !important;
+  top: 428px !important;
+  z-index: 100 !important;
 }
 
 .swiper-button-next {
-  /* border: 1px solid blue; */
   color: rgb(0, 140, 134) !important;
-  right: 25px !important;
+  right: 30% !important;
+  top: 428px !important;
+  z-index: 100 !important;
 }
 
 .swiper-button-prev::after {
-  font-size: 45px !important;
+  font-size: 30px !important;
+  z-index: 100 !important;
 }
 
 .swiper-button-next::after {
-  font-size: 45px !important;
+  font-size: 30px !important;
+  z-index: 100 !important;
 }
 
 .swiper-button-disabled {
   opacity: 1 !important;
   color: rgb(0, 140, 134, 0.3) !important;
-}
+} */
 
 .project-odd > .project-image-container {
-  width: calc(57% + 0px);
+  width: calc(61% + 0px);
   object-fit: cover;
   overflow: hidden;
-  /* border: 1px solid orange; */
+  border: 1px solid rgb(246, 246, 246);
   height: 475px;
-  border-radius: 1.2em;
+  border-radius: 1.5em;
   background-color: rgb(137, 146, 176);
-  z-index: 50;
+  max-width: 617px;
+  /* z-index: 50; */
   box-shadow: 0 3px 10px rgba(147, 147, 147, 0.1);
 }
 
 /* would like height of images to be the "same" as text block */
-.project-image {
-  width: 100%;
-  /* height: 425px; */
-}
+/* .project-image {
+  width: 100px;
+  border: 1px solid red;
+}*/
 
 .project-odd > .project-details {
   text-align: right;
   position: relative;
   /* position: absolute; */
-  width: 49%;
+  width: 45%;
   right: 0;
   margin-left: -50px;
   /* margin-top: 5em; */
@@ -378,30 +390,32 @@ section + section {
   background: rgb(120, 163, 170, 0.6);
   padding: 1.5em 2em;
   color: white;
-  border-radius: 1.2em;
-  border: 1px solid orange;
+  /* border-radius: 1.5em; */
+  /* border: 1px solid orange; */
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-end;
-  /* box-shadow: 0 3px 10px rgba(147, 147, 147, 0.1); */
-  /* z-index: 10; */
+  box-shadow: 0 3px 10px rgba(147, 147, 147, 0.1);
+  z-index: 10;
 }
 
 .project-even > .project-image-container {
   text-align: right;
   position: relative;
   /* position: absolute; */
-  width: 57%;
+  width: 61%;
   right: 0;
   margin-left: -50px;
   /* margin-top: 5em; */
   align-self: flex-end;
   height: 475px;
-  border-radius: 1.2em;
-  /* border: 1px solid orange; */
+  border-radius: 1.5em;
+  border: 1px solid rgb(255, 168, 133, 1);
   object-fit: cover;
   overflow: hidden;
+  max-width: 617px;
+  /* box-shadow: 0 3px 10px rgba(147, 147, 147, 0.1); */
 }
 
 .project-even > .project-details {
@@ -412,12 +426,12 @@ section + section {
   width: calc(49% + 0px);
   object-fit: cover;
   overflow: hidden;
-  border: 1px solid red;
+  /* border: 1px solid red; */
   height: 475px;
-  border-radius: 1.2em;
+  border-radius: 1.5em;
   z-index: 10;
   color: white;
-  background: rgb(120, 163, 170, 0.6);
+  background-color: rgb(120, 163, 170, 0.6);
   padding: 1.5em 2em;
 }
 
