--- a/styles.css
+++ b/styles.css
@@ -827,12 +827,12 @@ section + section {
 /*  */
 /*  */
 
-@media only screen and (max-width: 1210px) {
+@media only screen and (min-width: 1096px) and (max-width: 1210px) {
   .project {
     display: flex;
     /* display: block; */
     height: 775px;
-    border: 1px solid green;
+    /* border: 1px solid green; */
   }
 
   .project-odd > .project-image-container {
@@ -921,5 +921,458 @@ section + section {
   .tech-even {
     /* border: 1px solid red; */
     width: 45%;
+  }
+}
+
+@media only screen and (min-width: 1041px) and (max-width: 1095px) {
+  .project {
+    display: flex;
+    /* display: block; */
+    height: 775px;
+    border: 1px solid green;
+  }
+
+  .project-odd > .project-image-container {
+    width: 61.85%;
+    object-fit: cover;
+    overflow: hidden;
+    /* border: 1px solid rgb(255, 0, 0); */
+    height: 475px;
+    border-radius: 1.5em;
+    min-width: 570px;
+    z-index: 50;
+    /* z-index: -10; */
+    box-shadow: 0 3px 10px rgba(147, 147, 147, 0.1);
+    align-self: flex-end;
+  }
+
+  .project-odd > .project-details {
+    text-align: right;
+    position: relative;
+    /* position: absolute; */
+    /* width: 65.5%; */
+    width: 100%;
+    right: 0;
+    margin-left: -500px;
+    /* margin-top: 5em; */
+    align-self: flex-start;
+    margin-top: 0;
+    height: 475px;
+    background: rgb(120, 163, 170, 0.6);
+    padding: 1.5em 2em;
+    color: white;
+    /* border-radius: 1.5em; */
+    /* border: 1px solid orange; */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-end;
+    box-shadow: 0 3px 10px rgba(147, 147, 147, 0.1);
+    z-index: 10;
+  }
+
+  .project-even > .project-image-container {
+    text-align: right;
+    position: relative;
+    /* position: absolute; */
+    width: 61.85%;
+    right: 0;
+    margin-left: -500px;
+    /* margin-top: 5em; */
+    align-self: flex-end;
+    height: 475px;
+    border-radius: 1.5em;
+    /* border: 1px solid rgb(255, 168, 133, 1); */
+    object-fit: cover;
+    overflow: hidden;
+    /* max-width: 617px; */
+    min-width: 570px;
+    z-index: 50;
+    box-shadow: 0 3px 10px rgba(147, 147, 147, 0.1);
+  }
+
+  .project-even > .project-details {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    width: 100%;
+    object-fit: cover;
+    overflow: hidden;
+    /* border: 1px solid red; */
+    height: 475px;
+    /* border-radius: 1.5em; */
+    z-index: 10;
+    color: white;
+    background-color: rgb(120, 163, 170, 0.6);
+    padding: 1.5em 2em;
+    box-shadow: 0 3px 10px rgba(147, 147, 147, 0.1);
+  }
+
+  .description-odd {
+    margin-top: 0.5rem;
+    margin-bottom: 0;
+    font-size: 1.1rem;
+    padding-left: 0.5rem;
+    /* line-height: 1.45rem; */
+  }
+
+  .description-even {
+    margin-top: 0.5rem;
+    margin-bottom: 0;
+    font-size: 1.1rem;
+    padding-right: 0.5rem;
+    /* line-height: 1.45rem; */
+  }
+
+  .tech-odd {
+    /* border: 1px solid red; */
+    width: 20%;
+    margin-left: auto;
+  }
+
+  .tech-even {
+    /* border: 1px solid red; */
+    width: 20%;
+  }
+}
+
+@media only screen and (min-width: 926px) and (max-width: 1040px) {
+  .project {
+    display: flex;
+    /* display: block; */
+    height: 865px;
+    /* border: 1px solid green; */
+  }
+
+  .project-odd > .project-image-container {
+    width: 61.85%;
+    object-fit: cover;
+    overflow: hidden;
+    /* border: 1px solid rgb(255, 0, 0); */
+    height: 475px;
+    border-radius: 1.5em;
+    min-width: 570px;
+    z-index: 50;
+    /* z-index: -10; */
+    box-shadow: 0 3px 10px rgba(147, 147, 147, 0.1);
+    align-self: flex-end;
+  }
+
+  .project-odd > .project-details {
+    text-align: right;
+    position: relative;
+    /* position: absolute; */
+    /* width: 65.5%; */
+    width: 100%;
+    right: 0;
+    margin-left: -500px;
+    /* margin-top: 5em; */
+    align-self: flex-start;
+    margin-top: 0;
+    height: 475px;
+    background: rgb(120, 163, 170, 0.6);
+    padding: 1.5em 2em;
+    color: white;
+    /* border-radius: 1.5em; */
+    /* border: 1px solid orange; */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-end;
+    box-shadow: 0 3px 10px rgba(147, 147, 147, 0.1);
+    z-index: 10;
+  }
+
+  .project-even > .project-image-container {
+    text-align: right;
+    position: relative;
+    /* position: absolute; */
+    width: 61.85%;
+    right: 0;
+    margin-left: -500px;
+    /* margin-top: 5em; */
+    align-self: flex-end;
+    height: 475px;
+    border-radius: 1.5em;
+    /* border: 1px solid rgb(255, 168, 133, 1); */
+    object-fit: cover;
+    overflow: hidden;
+    /* max-width: 617px; */
+    min-width: 570px;
+    z-index: 50;
+    box-shadow: 0 3px 10px rgba(147, 147, 147, 0.1);
+  }
+
+  .project-even > .project-details {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    width: 100%;
+    object-fit: cover;
+    overflow: hidden;
+    /* border: 1px solid red; */
+    height: 475px;
+    /* border-radius: 1.5em; */
+    z-index: 10;
+    color: white;
+    background-color: rgb(120, 163, 170, 0.6);
+    padding: 1.5em 2em;
+    box-shadow: 0 3px 10px rgba(147, 147, 147, 0.1);
+  }
+
+  .description-odd {
+    margin-top: 0.5rem;
+    margin-bottom: 0;
+    font-size: 1.1rem;
+    padding-left: 0.5rem;
+    /* line-height: 1.45rem; */
+  }
+
+  .description-even {
+    margin-top: 0.5rem;
+    margin-bottom: 0;
+    font-size: 1.1rem;
+    padding-right: 0.5rem;
+    /* line-height: 1.45rem; */
+  }
+
+  .tech-odd {
+    /* border: 1px solid red; */
+    /* width: 20%; */
+    margin-left: auto;
+  }
+
+  .tech-even {
+    /* border: 1px solid red; */
+    /* width: 20%; */
+  }
+
+  .links {
+    width: 100%;
+    /* border: 1px solid green; */
+    margin-top: 0.5rem;
+    margin-bottom: 3.5rem;
+  }
+}
+
+@media only screen and (max-width: 925px) {
+  .project {
+    display: flex;
+    flex-direction: column;
+    /* display: block; */
+    height: 865px;
+    border: 1px solid green;
+  }
+
+  .project-odd > .project-image-container {
+    width: 100%;
+    object-fit: cover;
+    overflow: hidden;
+    /* border: 1px solid rgb(255, 0, 0); */
+    height: 475px;
+    border-radius: 1.5em;
+    /* min-width: 570px; */
+    max-width: 100%;
+    z-index: 50;
+    /* z-index: -10; */
+    box-shadow: 0 3px 10px rgba(147, 147, 147, 0.1);
+    align-self: flex-end;
+  }
+
+  .project-odd > .project-details {
+    text-align: right;
+    /* position: relative; */
+    /* position: absolute; */
+    /* width: 65.5%; */
+    width: 100%;
+    /* right: 0; */
+    max-width: 100%;
+    margin: 0;
+    /* margin-left: -617px; */
+    /* margin-top: 5em; */
+    align-self: flex-start;
+
+    margin-top: 0;
+    height: 475px;
+    background: rgb(120, 163, 170, 0.6);
+    padding: 1.5em 2em;
+    color: white;
+    /* border-radius: 1.5em; */
+    /* border: 1px solid orange; */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-end;
+    box-shadow: 0 3px 10px rgba(147, 147, 147, 0.1);
+    z-index: 10;
+  }
+
+  .project-even > .project-image-container {
+    text-align: right;
+    position: relative;
+    /* position: absolute; */
+    width: 61.85%;
+    right: 0;
+    margin-left: -500px;
+    /* margin-top: 5em; */
+    align-self: flex-end;
+    height: 475px;
+    border-radius: 1.5em;
+    /* border: 1px solid rgb(255, 168, 133, 1); */
+    object-fit: cover;
+    overflow: hidden;
+    /* max-width: 617px; */
+    /* min-width: 570px; */
+    min-width: 100%;
+    max-width: 100%;
+    z-index: 50;
+    box-shadow: 0 3px 10px rgba(147, 147, 147, 0.1);
+    align-self: flex-end;
+  }
+
+  .project-even > .project-details {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    width: 100%;
+    object-fit: cover;
+    overflow: hidden;
+    /* border: 1px solid red; */
+    height: 475px;
+    /* border-radius: 1.5em; */
+    z-index: 10;
+    color: white;
+    background-color: rgb(120, 163, 170, 0.6);
+    padding: 1.5em 2em;
+    box-shadow: 0 3px 10px rgba(147, 147, 147, 0.1);
+  }
+  .description-odd {
+    margin-top: 0.5rem;
+    margin-bottom: 0;
+    font-size: 1.1rem;
+    padding-left: 0.5rem;
+    /* line-height: 1.45rem; */
+  }
+
+  .description-even {
+    margin-top: 0.5rem;
+    margin-bottom: 0;
+    font-size: 1.1rem;
+    padding-right: 0.5rem;
+    /* line-height: 1.45rem; */
+  }
+
+  .tech-odd {
+    /* border: 1px solid red; */
+    /* width: 20%; */
+    margin-left: auto;
+  }
+
+  .tech-even {
+    /* border: 1px solid red; */
+    /* width: 20%; */
+  }
+
+  .links {
+    width: 100%;
+    /* border: 1px solid green; */
+    margin-top: 0.5rem;
+    margin-bottom: 3.5rem;
+  }
+}
+@media only screen and (min-width: 1140px) and (max-width: 1215px) {
+  /* add top margin to other elements in about me */
+
+  .about-me-flex {
+    display: flex;
+    width: 100%;
+    height: 525px;
+    border: 1px solid pink;
+  }
+
+  .listed-skills-flex {
+    height: 115px;
+    margin-top: 1.5rem;
+  }
+}
+
+@media only screen and (max-width: 1139px) {
+  /* add top margin to other elements in about me */
+
+  .about-me-flex {
+    display: flex;
+    width: 100%;
+    height: 525px;
+    border: 1px solid pink;
+  }
+  /* 
+
+  .listed-skills-flex {
+    width: 100% !important;
+    height: 50px;
+    margin-top: 1.5rem;
+  }
+
+  .listed-skills-flex li {
+    margin-right: 10%;
+    margin-top: 0;
+    margin-bottom: 0.9rem;
+  } */
+}
+
+@media only screen and (max-width: 1009px) {
+  /* add top margin to other elements in about me */
+
+  .about-me-flex {
+    display: flex;
+    width: 100%;
+    height: 625px;
+    border: 1px solid pink;
+  }
+  /* 
+
+  .listed-skills-flex {
+    width: 100% !important;
+    height: 50px;
+    margin-top: 1.5rem;
+  }
+
+  .listed-skills-flex li {
+    margin-right: 10%;
+    margin-top: 0;
+    margin-bottom: 0.9rem;
+  } */
+}
+
+@media only screen and (max-width: 866px) {
+  /* add top margin to other elements in about me */
+
+  .about-me-flex {
+    display: flex;
+    width: 100%;
+    height: 825px;
+    border: 1px solid pink;
+  }
+  /* 
+
+  .listed-skills-flex {
+    width: 100% !important;
+    height: 50px;
+    margin-top: 1.5rem;
+  }
+
+  .listed-skills-flex li {
+    margin-right: 10%;
+    margin-top: 0;
+    margin-bottom: 0.9rem;
+  } */
+}
+
+@media only screen and (max-width: 730px) {
+  :root {
+    font-size: 1rem;
   }
 }
