--- a/styles.css
+++ b/styles.css
@@ -929,7 +929,7 @@ section + section {
     display: flex;
     /* display: block; */
     height: 775px;
-    border: 1px solid green;
+    /* border: 1px solid green; */
   }
 
   .project-odd > .project-image-container {
@@ -1163,7 +1163,7 @@ section + section {
     flex-direction: column;
     /* display: block; */
     height: 865px;
-    border: 1px solid green;
+    /* border: 1px solid green; */
   }
 
   .project-odd > .project-image-container {
@@ -1290,7 +1290,7 @@ section + section {
     display: flex;
     width: 100%;
     height: 525px;
-    border: 1px solid pink;
+    /* border: 1px solid pink; */
   }
 
   .listed-skills-flex {
@@ -1306,7 +1306,7 @@ section + section {
     display: flex;
     width: 100%;
     height: 525px;
-    border: 1px solid pink;
+    /* border: 1px solid pink; */
   }
   /* 
 
@@ -1330,7 +1330,7 @@ section + section {
     display: flex;
     width: 100%;
     height: 625px;
-    border: 1px solid pink;
+    /* border: 1px solid pink; */
   }
   /* 
 
@@ -1354,7 +1354,7 @@ section + section {
     display: flex;
     width: 100%;
     height: 825px;
-    border: 1px solid pink;
+    /* border: 1px solid pink; */
   }
   /* 
 
