--- a/styles.css
+++ b/styles.css
@@ -113,7 +113,7 @@ header {
 }
 
 .intro-blurb {
-  margin-top: 1.3rem;
+  margin-top: 0.9rem;
   /* line-height: 1.6rem; */
   width: 55%;
   /* border: 1px solid yellowgreen; */
@@ -1411,8 +1411,95 @@ section + section {
   }
 }
 
-/* @media only screen and (max-width: 984px) {
-  .create-things-tagline {
-    line-height: 2.5rem;
+/* navigation */
+@media only screen and (max-width: 1125px) {
+  .main-nav > ul li {
+    padding-left: 1.2em;
+    padding-right: 1.2em;
   }
-} */
+}
+
+@media only screen and (max-width: 1085px) {
+  .main-nav > ul li {
+    padding-left: 1.1em;
+    padding-right: 1.1em;
+  }
+}
+
+.hamburger-nav {
+  display: none;
+}
+
+.hamburger-nav ul > li {
+  /* border: 1px solid orange; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-right: 0;
+}
+
+.hamburger > img {
+  width: 40px;
+  /* border: 1px solid purple; */
+}
+
+.hamburger > img:hover {
+  background-color: rgb(137, 146, 176, 0.7);
+}
+
+.nav-dropdown {
+  display: none;
+  /* border: 1px solid orangered; */
+  background-color: rgb(137, 146, 176, 0.7);
+}
+
+.nav-dropdown > ul {
+  /* padding: 1.5rem; */
+  padding: 0;
+}
+
+.nav-dropdown ul > li {
+  list-style: none;
+  /* border: 1px solid red; */
+  padding-left: 1.5rem;
+  /* padding-right: 1.5rem; */
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  /* text-align: right; */
+}
+
+#first-li-dropdown {
+  padding-top: 1rem;
+}
+
+.nav-dropdown ul > li + li {
+  margin-top: 0;
+}
+
+#resume-dropdown {
+  padding-bottom: 1rem;
+}
+
+.nav-dropdown ul > li:hover {
+  background-color: rgb(0, 140, 134, 0.4);
+}
+
+.nav-dropdown ul > li:hover > a {
+  color: black;
+}
+
+.nav-dropdown ul > li > a {
+  text-decoration: none;
+  color: white;
+}
+
+/* hamburger nav conversion */
+@media only screen and (max-width: 1005px) {
+  .main-nav {
+    display: none;
+    /* border: 1px solid red; */
+  }
+  .hamburger-nav {
+    display: inline-block;
+  }
+}
