--- a/styles.css
+++ b/styles.css
@@ -1354,11 +1354,44 @@ section + section {
   /* add top margin to other elements in about me */
 
   .about-me-flex {
-    display: flex;
+    display: inline-block;
     width: 100%;
-    height: 825px;
+    height: 100%;
     /* border: 1px solid pink; */
   }
+
+  .intro-and-skills-flex {
+    width: 100%;
+    /* border: 1px solid red; */
+    /* height: 63%; */
+    padding-right: 0rem;
+  }
+
+  .profile-image-container {
+    margin-top: 0.5rem;
+    width: 60%;
+    /* border: 1px solid rgb(0, 47, 255); */
+    position: relative;
+    z-index: 5;
+    margin-bottom: 1.25rem;
+    /* margin: 0 auto; */
+  }
+
+  .profile-image-container > img {
+    width: 91%;
+  }
+
+  .profile-image-background {
+    margin-top: 0;
+    position: absolute;
+    top: 30px;
+    left: 30px;
+    width: 91%;
+    background-color: #008c86;
+    z-index: -1;
+    transition: all 0.3s;
+  }
+
   /* 
 
   .listed-skills-flex {
